syntax = "proto3";
package godless;

message NamespaceMessage {
	repeated NamespaceEntryMessage entries = 1;
}

message NamespaceEntryMessage {
	string table = 1;
	string row = 2;
	string entry = 3;
	repeated string points = 4;
}

message IndexMessage {
	repeated IndexEntryMessage entries = 1;
}

message IndexEntryMessage {
	string table = 1;
	repeated string links = 2;
}

message APIResponseMessage {

}

message QueryMessage {
	uint32 opCode = 1;
	string table = 2;
	QueryJoinMessage join = 3;
	QuerySelectMessage select = 4;
}

message QueryJoinMessage {
	repeated QueryRowJoinMessage rows = 1;
}

message QueryRowJoinMessage {
	string row = 1;
	repeated QueryRowJoinEntryMessage entries = 2;
}

message QueryRowJoinEntryMessage {
	string entry = 1;
	string point = 2;
}

message QuerySelectMessage {
	uint32 limit = 1;
	QueryWhereMessage where = 2;
}

message QueryWhereMessage {
	uint32 opCode = 1;
	QueryPredicateMessage predicate = 2;
	repeated QueryWhereMessage clauses = 3;
}

message QueryPredicateMessage {
	uint32 opCode = 1;
	repeated string keys = 2;
	repeated string literals = 3;
	bool userow = 4;
}
